# Extreme-ET

./: ADVANCED_FEATURES.md  ARCHITECTURE.md  EXTREME_FRAMEWORK_GUIDE_CN.md  GETTING_STARTED.md  LICENSE  README.md  requirements.txt  setup.py  test_new_modules.py  tutorial_01_basics_for_freshmen.ipynb
docs/: algorithms.md  data_prep.md  optimization.md  physics.md
egli-example/: README.md  environment.yml  pyproject.toml
egli-example/examples/: example04_synthetic_quickstart_full_pipeline.py  example05_global_extreme_et_wrr_pipeline.py  example06_multires_urban_basin_ncc_pipeline.py
egli-example/src/extreme_et_detection/: __init__.py  basin_scale.py  config.py  data_io.py  extreme_definitions.py  indices.py  multi_res.py  pet_indices.py  plotting.py  preprocessing.py  records.py  ridge_detection.py  scaling.py  srex_regions.py  trends.py  utils_stats.py
egli-example/tests/: test_indices.py  test_ridge_detection.py  test_trends.py
examples/: example_advanced_analysis.py  example_egli_2025.py  example_markonis_2025.py  example_multires_et_extremes.py  example_realdata_io_stub.py  example_zhao_2025.py
extreme_evaporation_events.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py  contribution_analysis.py  data_processing.py  detection_attribution.py  evaluation.py  event_evolution.py  extreme_detection.py  init.py  io_utils.py  multivariate_extremes.py  nonstationary_threshold.py  penman_monteith.py  spatial_analysis.py  utils.py  water_cycle_analysis.py
tests/: test_complex_scenarios.py  test_methods.py
(+2 files in other folders)
